test_case/rust-lang_rust/51104_399715982_61.rs
\n\nRust only looks at the signature of the called function, as such it must\nalready specify all requirements that will be used for every type parameter.\n"},"level":"error","spans":[{"file_name":"/checkout/src/test/ui/mismatched_types/cast-rfc0401.rs","byte_start":2456,"byte_end":2457,"line_start":72,"line_end":72,"column_start":13,"col// error: casting `&u8` as `u32` is invalid\n